--- a/public/css/logbook.css
+++ b/public/css/logbook.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 .logbook-container {
 	width: 80%;
 	margin: 0rem auto;
@@ -5,8 +12,14 @@
 }
 
 .table-title {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-pack: justify;
+	-ms-flex-pack: justify;
 	justify-content: space-between;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
 	width: 95%;
 	margin: 0 auto;
@@ -31,7 +44,10 @@
 }
 
 .table-buttons {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-ms-flex-pack: distribute;
 	justify-content: space-around;
 }
 
